# image-captioning-mini

./: .gitignore  README.md  kernel-metadata.json  mainLocal.ipynb  pyproject.toml  requirements.txt
notebooks/: 0. Eda.ipynb  01 - Analyst.ipynb  1. Preprocessing.ipynb  2. Baseline.ipynb  3. Advanced.ipynb  3. Advanced1.ipynb  Week_01_02.ipynb  Week_05_06.ipynb  config.py  data_loader.py  eda.py  model.py  template.ipynb  utils.py
src/: config.py  dataloader.py  eda.py  evaluate.py  model.py  preprocess.py  train.py  utils.py
src/datasets/: Flickr8k.py  __init__.py
src/eda/: eda.py
src/model/: evaluate.py  train.py
src/model/advanced/: Advance.py  __init__.py
src/model/advanced/Dataset/: ImageCaptionDataset.py  __init__.py
src/model/advanced/Models/: __init__.py  network.py  network2.py
src/model/baseline/: Config.py  __init__.py
src/preprocessing/: preprocess.py
