[tool.poetry]
name = "image-captioning-mini"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
numpy = "^2.4.1"
pandas = "^3.0.0"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
scikit-learn = "^1.8.0"
notebook = "^7.5.3"
ipykernel = "^7.1.0"
tqdm = "^4.67.1"
pillow = "^12.1.0"
nltk = "^3.9.2"
opencv-python-headless = "^4.13.0.90"
torch = "^2.10.0"
torchvision = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
